_sass/modules/_header.scss
.header {
  padding-bottom: 2rem;
  margin: 0 auto;
  max-width: 38em;

  @include respond-to('large-plus') {
    padding-bottom: 0;
    position: fixed;
    bottom: 1.5rem;
    left: 1.5rem;
  }

  h1 {
    float: left;
    margin: 0;
    width: 50%;
    font-size: 1.2rem;
    line-height: 2;
    padding-left: 1.1rem;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-name: zoomIn;
            animation-name: zoomIn;
    -webkit-animation-duration: 0.5s;
            animation-duration: 0.5s;
    -webkit-animation-delay: 0.5s;
            animation-delay: 0.5s;

    @include respond-to('large-plus') {
      line-height: 1.6;
    }

    a {
      text-decoration: none;
      transition: all 0.25s ease-in-out;

      &:link, &:visited, &:active {
        color: $black;
      }

      &:hover {
        text-decoration: underline;
      }

      @include respond-to('large-plus') {
        &:link, &:visited, &:active, &:hover {
          color: white;
        }
      }
    }
  }

}

